// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid demo -- col 1`] = `
.c18 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 8.33333333%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.c19 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 8.33333333%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c17 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
}

.c17 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c10 {
  vertical-align: baseline;
}

.c13 {
  position: relative;
}

.c15 {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.c9 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  cursor: pointer;
  color: #0a1633;
  border-color: #d2d6ea;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  background: #ffffff;
  display: inline-block;
  vertical-align: middle;
}

.c9:hover {
  color: #3860f4;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c16 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  cursor: pointer;
  color: #0a1633;
  border-color: #d2d6ea;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  background: #ffffff;
  display: inline-block;
  vertical-align: middle;
  cursor: not-allowed;
  pointer-events: none;
  color: #cccccc;
  border-color: #c3cad9;
}

.c16:hover {
  color: #3860f4;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c7 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  display: inline-block;
  vertical-align: middle;
  color: #0a1633;
  height: 28px;
  border: 1px solid #d2d6ea;
  padding-right: 22px;
  border-right-width: 0;
}

.c7 .c14 {
  line-height: 26px;
  height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c7 .c14::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c7 .c14::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c7 .c14:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c7 .c14::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c7:hover {
  border-color: #c3cad9;
}

.c7 .c12 {
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
}

.c7 .c12:hover {
  background: #f6f6fb;
}

.c7 .c14 {
  padding: 0 0 0 8px;
  text-align: left;
  box-shadow: none;
  background: transparent;
  width: 34px;
}

.c7 .c8,
.c7 .c11 {
  right: 0;
  box-sizing: content-box;
  border-radius: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c7 .c8:hover,
.c7 .c11:hover {
  color: #3860f4;
}

.c7 .c8 {
  border-width: 0 0 0 1px;
  top: -1px;
  padding-top: 1px;
}

.c7 .c11 {
  border-width: 1px 0 0 1px;
  bottom: 0;
  border-top-color: #c3cad9;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="2"
      >
        span
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="10"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default c7"
        >
          <div>
            <span
              class="c8 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c9"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-up c10"
              />
            </span>
            <span
              class="c11 uc-fe-numberinput-handler-down uc-fe-numberinput-handler c9"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-down c10"
              />
            </span>
          </div>
          <div
            class="c12 uc-fe-numberinput-input-wrap c13"
          >
            <input
              autocomplete="off"
              class="c14 uc-fe-numberinput-input c15"
              max="12"
              min="0"
              step="1"
              value="1"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="2"
      >
        offset
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="10"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default c7"
        >
          <div>
            <span
              class="c8 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c9"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-up c10"
              />
            </span>
            <span
              class="c11 uc-fe-numberinput-handler-down uc-fe-numberinput-handler uc-fe-numberinput-handler-disabled c16"
              disabled=""
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-down c10"
              />
            </span>
          </div>
          <div
            class="c12 uc-fe-numberinput-input-wrap c13"
          >
            <input
              autocomplete="off"
              class="c14 uc-fe-numberinput-input c15"
              max="12"
              min="0"
              step="1"
              value="0"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="2"
      >
        pull
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="10"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default c7"
        >
          <div>
            <span
              class="c8 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c9"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-up c10"
              />
            </span>
            <span
              class="c11 uc-fe-numberinput-handler-down uc-fe-numberinput-handler uc-fe-numberinput-handler-disabled c16"
              disabled=""
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-down c10"
              />
            </span>
          </div>
          <div
            class="c12 uc-fe-numberinput-input-wrap c13"
          >
            <input
              autocomplete="off"
              class="c14 uc-fe-numberinput-input c15"
              max="12"
              min="0"
              step="1"
              value="0"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="2"
      >
        push
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="10"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default c7"
        >
          <div>
            <span
              class="c8 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c9"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-up c10"
              />
            </span>
            <span
              class="c11 uc-fe-numberinput-handler-down uc-fe-numberinput-handler uc-fe-numberinput-handler-disabled c16"
              disabled=""
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-down c10"
              />
            </span>
          </div>
          <div
            class="c12 uc-fe-numberinput-input-wrap c13"
          >
            <input
              autocomplete="off"
              class="c14 uc-fe-numberinput-input c15"
              max="12"
              min="0"
              step="1"
              value="0"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    style="padding:10px 0;border:1px solid #ccc;"
  >
    <div
      class="uc-fe-row c17"
      type="flex"
    >
      <div
        class="c4 uc-fe-col c18"
        span="1"
      >
        <div
          style="background:#888;height:20px;border:1px solid #111;"
        />
      </div>
      <div
        class="c4 uc-fe-col c19"
        offset="0"
        span="1"
        style="z-index:10;"
      >
        <div
          style="background:red;height:20px;border:1px solid #111;text-align:center;line-height:20px;color:white;"
        >
          target
        </div>
      </div>
      <div
        class="c4 uc-fe-col c18"
        span="1"
      >
        <div
          style="background:#888;height:20px;border:1px solid #111;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid demo -- col-offset 1`] = `
.c2 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  margin-left: 8.33333333%;
}

.c3 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  margin-left: 16.66666667%;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  margin-left: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  margin-left: 33.33333333%;
}

.c0 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c0:before,
.c0:after {
  content: ' ';
  display: table;
}

.c0:after {
  clear: both;
}

.c0 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

<div>
  <div
    class="uc-fe-row c0"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 uc-fe-col c2"
      offset="1"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        offset: 1
      </div>
    </div>
  </div>
  <div
    class="uc-fe-row c0"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 uc-fe-col c3"
      offset="2"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        offset: 2
      </div>
    </div>
  </div>
  <div
    class="uc-fe-row c0"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 uc-fe-col c4"
      offset="3"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        offset: 3
      </div>
    </div>
  </div>
  <div
    class="uc-fe-row c0"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 uc-fe-col c5"
      offset="4"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        offset: 4
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid demo -- col-order 1`] = `
.c2 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c3 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

.c0 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c0:before,
.c0:after {
  content: ' ';
  display: table;
}

.c0:after {
  clear: both;
}

.c0 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

<div>
  <div
    class="uc-fe-row c0"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 uc-fe-col c2"
      order="4"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        order: 4, i: 0
      </div>
    </div>
    <div
      class="c1 uc-fe-col c3"
      order="3"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        order: 3, i: 1
      </div>
    </div>
    <div
      class="c1 uc-fe-col c4"
      order="2"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        order: 2, i: 2
      </div>
    </div>
    <div
      class="c1 uc-fe-col c5"
      order="1"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        order: 1, i: 3
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid demo -- col-pullAndPush 1`] = `
.c2 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  right: 8.33333333%;
}

.c3 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  right: 16.66666667%;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  right: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  right: 33.33333333%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  left: 8.33333333%;
}

.c7 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  left: 16.66666667%;
}

.c8 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  left: 25%;
}

.c9 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  left: 33.33333333%;
}

.c0 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c0:before,
.c0:after {
  content: ' ';
  display: table;
}

.c0:after {
  clear: both;
}

.c0 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

<div>
  <div
    class="uc-fe-row c0"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 uc-fe-col c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        pull: 1
      </div>
    </div>
    <div
      class="c1 uc-fe-col c3"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        pull: 2
      </div>
    </div>
    <div
      class="c1 uc-fe-col c4"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        pull: 3
      </div>
    </div>
    <div
      class="c1 uc-fe-col c5"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        pull: 4
      </div>
    </div>
  </div>
  <div
    class="uc-fe-row c0"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 uc-fe-col c6"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        push: 1
      </div>
    </div>
    <div
      class="c1 uc-fe-col c7"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        push: 2
      </div>
    </div>
    <div
      class="c1 uc-fe-col c8"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        push: 3
      </div>
    </div>
    <div
      class="c1 uc-fe-col c9"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        push: 4
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid demo -- col-span 1`] = `
.c2 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 8.33333333%;
}

.c3 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 33.33333333%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

.c7 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 50%;
}

.c8 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 58.33333333%;
}

.c9 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 66.66666667%;
}

.c0 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c0:before,
.c0:after {
  content: ' ';
  display: table;
}

.c0:after {
  clear: both;
}

.c0 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

<div>
  <div
    class="uc-fe-row c0"
  >
    <div
      class="c1 uc-fe-col c2"
      span="1"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;margin-bottom:10px;font-size:14px;color:#FFF;text-align:center;"
      >
        span: 1
      </div>
    </div>
    <div
      class="c1 uc-fe-col c3"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;margin-bottom:10px;font-size:14px;color:#FFF;text-align:center;"
      >
        span: 2
      </div>
    </div>
    <div
      class="c1 uc-fe-col c4"
      span="3"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;margin-bottom:10px;font-size:14px;color:#FFF;text-align:center;"
      >
        span: 3
      </div>
    </div>
    <div
      class="c1 uc-fe-col c5"
      span="4"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;margin-bottom:10px;font-size:14px;color:#FFF;text-align:center;"
      >
        span: 4
      </div>
    </div>
    <div
      class="c1 uc-fe-col c6"
      span="5"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;margin-bottom:10px;font-size:14px;color:#FFF;text-align:center;"
      >
        span: 5
      </div>
    </div>
    <div
      class="c1 uc-fe-col c7"
      span="6"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;margin-bottom:10px;font-size:14px;color:#FFF;text-align:center;"
      >
        span: 6
      </div>
    </div>
    <div
      class="c1 uc-fe-col c8"
      span="7"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;margin-bottom:10px;font-size:14px;color:#FFF;text-align:center;"
      >
        span: 7
      </div>
    </div>
    <div
      class="c1 uc-fe-col c9"
      span="8"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;margin-bottom:10px;font-size:14px;color:#FFF;text-align:center;"
      >
        span: 8
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid demo -- row 1`] = `
.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
}

.c33 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c34 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c35 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c36 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c37 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c38 .c4 {
  padding-left: 0px;
  padding-right: 0px;
}

.c39 .c4 {
  padding-left: 1px;
  padding-right: 1px;
}

.c40 .c4 {
  padding-left: 2px;
  padding-right: 2px;
}

.c41 .c4 {
  padding-left: 4px;
  padding-right: 4px;
}

.c42 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c43 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c44 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c45 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c46 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c32 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c32:before,
.c32:after {
  content: ' ';
  display: table;
}

.c32:after {
  clear: both;
}

.c32 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c22 {
  vertical-align: baseline;
}

.c29 {
  position: relative;
}

.c31 {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.c26 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  cursor: pointer;
  color: #0a1633;
  border-color: #d2d6ea;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  background: #ffffff;
  display: inline-block;
  vertical-align: middle;
}

.c26:hover {
  color: #3860f4;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c24 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  display: inline-block;
  vertical-align: middle;
  color: #0a1633;
  height: 28px;
  border: 1px solid #d2d6ea;
  padding-right: 22px;
  border-right-width: 0;
}

.c24 .c30 {
  line-height: 26px;
  height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c24 .c30::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c24 .c30::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c24 .c30:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c24 .c30::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c24:hover {
  border-color: #c3cad9;
}

.c24 .c28 {
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
}

.c24 .c28:hover {
  background: #f6f6fb;
}

.c24 .c30 {
  padding: 0 0 0 8px;
  text-align: left;
  box-shadow: none;
  background: transparent;
  width: 34px;
}

.c24 .c25,
.c24 .c27 {
  right: 0;
  box-sizing: content-box;
  border-radius: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c24 .c25:hover,
.c24 .c27:hover {
  color: #3860f4;
}

.c24 .c25 {
  border-width: 0 0 0 1px;
  top: -1px;
  padding-top: 1px;
}

.c24 .c27 {
  border-width: 1px 0 0 1px;
  bottom: 0;
  border-top-color: #c3cad9;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

.c21 {
  margin-right: 8px;
  font-size: 14px;
}

.c19 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  color: #0a1633;
}

.c19 .c20 {
  color: #c3cad9;
}

.c19 .c20 {
  color: #3860f4;
}

.c23 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c23 .c20 {
  color: #c3cad9;
}

.c23:hover {
  color: #0a1633;
}

.c23:hover .c20 {
  color: #3357df;
}

.c17 {
  position: relative;
  margin-bottom: -8px;
}

.c17 .c18,
.c17 .sc-EHOje {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c17 .c18:last-child,
.c17 .sc-EHOje:last-child {
  margin-right: 0;
}

.c17 .c48 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c17 .c48:last-child {
  margin-right: 0;
}

.c17 .c49+.c49 {
  margin-left: -1px;
}

.c17 .c47 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c17 .c47:first-child {
  border-radius: 2px 0 0 2px;
}

.c17 .c47:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c9 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c11 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c14 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c16 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c7 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c7:hover {
  border-color: #3357df;
}

.c7:hover .c13 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c7 .c13 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c7 .c15 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c7 .c8 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c7 .c10,
.c7 .c12 {
  line-height: 16px;
}

.c7 .c10 {
  padding-right: 20px;
}

.c7 .c12 {
  padding-left: 20px;
}

.c7 .c10 {
  display: none;
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="2"
      >
        flex
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="10"
      >
        <div
          class="c7"
        >
          <div
            class="c8 c9"
          >
            <span
              class="c10 c11"
            >
              ON
            </span>
            <span
              class="c12 c11"
            >
              OFF
            </span>
            <span
              class="c13 c14"
            >
              <span
                class="c15 c16"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="2"
      >
        align
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="10"
      >
        <div
          class="c17"
        >
          <div
            checked=""
            class="c18 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c19"
          >
            <i
              class="uc-fe-icon icon__cbox-ed c20 c21 c22"
            />
            top
          </div>
          <div
            class="c18 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c23"
          >
            <i
              class="uc-fe-icon icon__cbox c20 c21 c22"
            />
            middle
          </div>
          <div
            class="c18 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c23"
          >
            <i
              class="uc-fe-icon icon__cbox c20 c21 c22"
            />
            bottom
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="2"
      >
        justify
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="10"
      >
        <div
          class="c17"
        >
          <div
            checked=""
            class="c18 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c19"
          >
            <i
              class="uc-fe-icon icon__cbox-ed c20 c21 c22"
            />
            start
          </div>
          <div
            class="c18 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c23"
          >
            <i
              class="uc-fe-icon icon__cbox c20 c21 c22"
            />
            end
          </div>
          <div
            class="c18 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c23"
          >
            <i
              class="uc-fe-icon icon__cbox c20 c21 c22"
            />
            center
          </div>
          <div
            class="c18 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c23"
          >
            <i
              class="uc-fe-icon icon__cbox c20 c21 c22"
            />
            space-around
          </div>
          <div
            class="c18 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c23"
          >
            <i
              class="uc-fe-icon icon__cbox c20 c21 c22"
            />
            space-between
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="2"
      >
        gutter
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="10"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default c24"
        >
          <div>
            <span
              class="c25 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c26"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-up c22"
              />
            </span>
            <span
              class="c27 uc-fe-numberinput-handler-down uc-fe-numberinput-handler c26"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-down c22"
              />
            </span>
          </div>
          <div
            class="c28 uc-fe-numberinput-input-wrap c29"
          >
            <input
              autocomplete="off"
              class="c30 uc-fe-numberinput-input c31"
              min="0"
              step="1"
              value="16"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    style="height:40px;border:1px solid #ccc;"
  >
    <div
      class="uc-fe-row c32"
      style="height:100%;"
    >
      <div
        class="c4 uc-fe-col c33"
        span="3"
      >
        <div
          style="background:#888;height:20px;border:1px solid #111;"
        />
      </div>
      <div
        class="c4 uc-fe-col c33"
        span="3"
      >
        <div
          style="background:#888;height:20px;border:1px solid #111;"
        />
      </div>
      <div
        class="c4 uc-fe-col c33"
        span="3"
      >
        <div
          style="background:#888;height:20px;border:1px solid #111;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid demo -- row-align 1`] = `
.c2 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 33.33333333%;
}

.c5 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c6 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c4 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c4 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

<div>
  <div
    class="uc-fe-row c0"
    style="margin-bottom:10px;height:40px;border:1px solid #ccc;"
    type="flex"
  >
    <div
      class="c1 uc-fe-col c2"
      span="4"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="4"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
  <div
    class="uc-fe-row c3"
    style="margin-bottom:10px;height:40px;border:1px solid #ccc;"
    type="flex"
  >
    <div
      class="c1 uc-fe-col c2"
      span="4"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="4"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
  <div
    class="uc-fe-row c4"
    style="margin-bottom:10px;height:40px;border:1px solid #ccc;"
    type="flex"
  >
    <div
      class="c1 uc-fe-col c2"
      span="4"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="4"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
</div>
`;

exports[`Grid demo -- row-base 1`] = `
.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 8.33333333%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c7 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 33.33333333%;
}

.c8 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

.c2 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 50%;
}

.c3 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 66.66666667%;
}

.c0 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c0:before,
.c0:after {
  content: ' ';
  display: table;
}

.c0:after {
  clear: both;
}

.c0 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c9 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c10 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c11 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c12 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

<div>
  <div
    class="uc-fe-row c0"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 uc-fe-col c2"
      span="6"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="6"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
  <div
    class="uc-fe-row c0"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 uc-fe-col c3"
      span="8"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c4"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
  <div
    class="uc-fe-row c0"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 uc-fe-col c5"
      span="1"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c6"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c7"
      span="4"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c8"
      span="5"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
  <div
    class="uc-fe-row c0"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 uc-fe-col c7"
      span="4"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c6"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c4"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c6"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c5"
      span="1"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
</div>
`;

exports[`Grid demo -- row-gutter 1`] = `
.c2 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c6:before,
.c6:after {
  content: ' ';
  display: table;
}

.c6:after {
  clear: both;
}

.c6 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c7 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c8 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c9 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c10 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  position: relative;
  display: block;
  height: auto;
  margin-left: 0px;
  margin-right: 0px;
}

.c0:before,
.c0:after {
  content: ' ';
  display: table;
}

.c0:after {
  clear: both;
}

.c0 .c1 {
  padding-left: 0px;
  padding-right: 0px;
}

.c3 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -1px;
  margin-right: -1px;
}

.c3:before,
.c3:after {
  content: ' ';
  display: table;
}

.c3:after {
  clear: both;
}

.c3 .c1 {
  padding-left: 1px;
  padding-right: 1px;
}

.c4 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -2px;
  margin-right: -2px;
}

.c4:before,
.c4:after {
  content: ' ';
  display: table;
}

.c4:after {
  clear: both;
}

.c4 .c1 {
  padding-left: 2px;
  padding-right: 2px;
}

.c5 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -4px;
  margin-right: -4px;
}

.c5:before,
.c5:after {
  content: ' ';
  display: table;
}

.c5:after {
  clear: both;
}

.c5 .c1 {
  padding-left: 4px;
  padding-right: 4px;
}

<div>
  <div
    class="uc-fe-row c0"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 uc-fe-col c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
  <div
    class="uc-fe-row c3"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 uc-fe-col c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
  <div
    class="uc-fe-row c4"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 uc-fe-col c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
  <div
    class="uc-fe-row c5"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 uc-fe-col c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
  <div
    class="uc-fe-row c6"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 uc-fe-col c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
</div>
`;

exports[`Grid demo -- row-justify 1`] = `
.c2 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
}

.c7 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c8 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c9 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c10 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c11 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c12 .c1 {
  padding-left: 0px;
  padding-right: 0px;
}

.c13 .c1 {
  padding-left: 1px;
  padding-right: 1px;
}

.c14 .c1 {
  padding-left: 2px;
  padding-right: 2px;
}

.c15 .c1 {
  padding-left: 4px;
  padding-right: 4px;
}

.c0 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c4 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c5 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c6 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

<div>
  <div
    class="uc-fe-row c0"
    style="margin-bottom:10px;height:40px;border:1px solid #ccc;"
    type="flex"
  >
    <div
      class="c1 uc-fe-col c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
  <div
    class="uc-fe-row c3"
    style="margin-bottom:10px;height:40px;border:1px solid #ccc;"
    type="flex"
  >
    <div
      class="c1 uc-fe-col c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
  <div
    class="uc-fe-row c4"
    style="margin-bottom:10px;height:40px;border:1px solid #ccc;"
    type="flex"
  >
    <div
      class="c1 uc-fe-col c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
  <div
    class="uc-fe-row c5"
    style="margin-bottom:10px;height:40px;border:1px solid #ccc;"
    type="flex"
  >
    <div
      class="c1 uc-fe-col c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
  <div
    class="uc-fe-row c6"
    style="margin-bottom:10px;height:40px;border:1px solid #ccc;"
    type="flex"
  >
    <div
      class="c1 uc-fe-col c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
</div>
`;
